# ai-interview-simulation

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b4db7880772f_initial.py
backend/app/: main.py
backend/app/api/: interviews.py  resumes.py  schemas.py
backend/app/cache/: client.py
backend/app/core/: config.py  logger.py
backend/app/db/: chroma.py  models.py  session.py
backend/app/orchestrator/: orchestrator.py  prompt.py  state.py
backend/app/pipeline/: extractor.py  indexer.py  llm.py  retriever.py  schemas.py  structurer.py  stt.py  tts.py
backend/app/workers/: feedback.py  resume.py
backend/app/ws/: gateway.py
backend/scripts/: interview_client.py  reconnect_test.py
docs/: architecture.md  e2e-checklist.md  project-overview.md  sprint-plan.md
frontend/: .env.example  package-lock.json  package.json  playwright.config.js
frontend/public/: pcm-worklet.js
frontend/src/: main.js
frontend/src/router/: index.js
frontend/src/services/: audioEngine.js  httpClient.js  wsClient.js
frontend/src/stores/: interviewStore.js  mediaStore.js
frontend/src/views/: FeedbackView.vue  InterviewRoomView.vue  UploadView.vue
frontend/tests/: browser_e2e.spec.js
