[project]
name = "ai-interview-backend"
version = "0.1.0"
description = "AI Interview Simulator — FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "redis[asyncio]>=8.0.1",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "pytest-asyncio>=0.25",
]
